// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test WaterfallList/SQLExecuteMode render onUpdateDescription 1`] = `
<div>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component "
      style="height: auto; overflow: auto;"
    >
      <div
        class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-list-item-no-flex"
              >
                <div
                  class="css-10ig619"
                >
                  <div
                    class="result-card-header"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="number"
                        >
                          #
                          1
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-has-color ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1u3lh6f css-dev-only-do-not-override-txh9fw"
                                style="background-color: gray;"
                              >
                                <span
                                  class="custom-icon custom-icon-level-normal css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M15 17H3C2.80109 17 2.61032 16.921 2.46967 16.7803C2.32902 16.6397 2.25 16.4489 2.25 16.25V2.75C2.25 2.55109 2.32902 2.36032 2.46967 2.21967C2.61032 2.07902 2.80109 2 3 2H15C15.1989 2 15.3897 2.07902 15.5303 2.21967C15.671 2.36032 15.75 2.55109 15.75 2.75V16.25C15.75 16.4489 15.671 16.6397 15.5303 16.7803C15.3897 16.921 15.1989 17 15 17ZM6 5.75V7.25H12V5.75H6ZM6 8.75V10.25H12V8.75H6ZM6 11.75V13.25H9.75V11.75H6Z"
                                      fill="#7D8CA8"
                                    />
                                  </svg>
                                </span>
                                0
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            复制执行语句
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            分 析
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="result-card-content"
                  >
                    <div
                      class="result-card-content-options"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 0px;"
                        >
                          <div
                            class="css-sljxhh"
                          >
                            执行语句
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <div
                            class="css-u9vvlc"
                          >
                            回滚语句
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 0px;"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                                  >
                                    <span
                                      class="custom-icon css-u3jcp4"
                                      role="img"
                                    >
                                      <svg
                                        fill="none"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                                          fill="#4583FF"
                                        />
                                      </svg>
                                    </span>
                                    <span>
                                      <span
                                        class="sql-source-title"
                                      >
                                        所在文件
                                      </span>
                                      -
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            <span
                              class="custom-icon css-u3jcp4"
                              role="img"
                            >
                              <svg
                                height="18"
                                id="mx_n_1705397970752"
                                version="1.1"
                                viewBox="0 0 1024 1024"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M512 938.666667c-53.333333 0-384-257.258667-384-469.333334S299.925333 85.333333 512 85.333333s384 171.925333 384 384-330.666667 469.333333-384 469.333334z m0-352c64.8 0 117.333333-52.533333 117.333333-117.333334s-52.533333-117.333333-117.333333-117.333333-117.333333 52.533333-117.333333 117.333333 52.533333 117.333333 117.333333 117.333334z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              <span
                                class="sql-source-title"
                              >
                                所在行
                              </span>
                              -
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="actiontech-sql-renderer-wrapper css-dz7fl9"
                    >
                      <pre>
                        <code>
                          <div
                            class="code-line"
                          >
                            <span
                              class="code-line-number"
                            >
                              1
                            </span>
                            <span
                              class="hljs-keyword"
                            >
                              SELECT
                            </span>
                             
                            <span
                              class="hljs-number"
                            >
                              1
                            </span>
                            ;
                          </div>
                        </code>
                      </pre>
                    </div>
                    <div
                      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
                      role="tree"
                    >
                      <div>
                        <input
                          aria-label="for screen reader"
                          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="ant-tree-treenode"
                        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
                      >
                        <div
                          class="ant-tree-indent"
                        >
                          <div
                            class="ant-tree-indent-unit"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tree-list"
                        style="position: relative;"
                      >
                        <div
                          class="ant-tree-list-holder"
                        >
                          <div>
                            <div
                              class="ant-tree-list-holder-inner"
                              style="display: flex; flex-direction: column;"
                            >
                              <div
                                aria-grabbed="false"
                                class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                                draggable="false"
                              >
                                <span
                                  aria-hidden="true"
                                  class="ant-tree-indent"
                                />
                                <span
                                  class="ant-tree-switcher ant-tree-switcher_close"
                                >
                                  <span
                                    class="ant-tree-switcher-icon custom-icon custom-icon-arrow-down css-u3jcp4"
                                    role="img"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                                  title=""
                                >
                                  <span
                                    class="ant-tree-title"
                                  >
                                    <span
                                      class="audit-result-tree-title"
                                    >
                                      审核结果
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-tree ant-tree-icon-hide css-1fzwdia css-dev-only-do-not-override-txh9fw"
                      role="tree"
                    >
                      <div>
                        <input
                          aria-label="for screen reader"
                          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="ant-tree-treenode"
                        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
                      >
                        <div
                          class="ant-tree-indent"
                        >
                          <div
                            class="ant-tree-indent-unit"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tree-list"
                        style="position: relative;"
                      >
                        <div
                          class="ant-tree-list-holder"
                        >
                          <div>
                            <div
                              class="ant-tree-list-holder-inner"
                              style="display: flex; flex-direction: column;"
                            >
                              <div
                                aria-grabbed="false"
                                class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                                draggable="false"
                              >
                                <span
                                  aria-hidden="true"
                                  class="ant-tree-indent"
                                />
                                <span
                                  class="ant-tree-switcher ant-tree-switcher_close"
                                >
                                  <span
                                    class="ant-tree-switcher-icon custom-icon custom-icon-arrow-down css-u3jcp4"
                                    role="img"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                                  title="执行结果"
                                >
                                  <span
                                    class="ant-tree-title"
                                  >
                                    执行结果
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="result-card-footer"
                  >
                    <div
                      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-spin-container"
                      >
                        <div
                          class="css-lpwde2"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="edit-2-fill"
                            >
                              <path
                                d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                                fill="#8A8F99"
                                id="Vector"
                              />
                            </g>
                          </svg>
                          <input
                            class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper result-describe-input css-1pd1cd5"
                            placeholder="添加说明"
                            type="text"
                            value="update description"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test WaterfallList/SQLExecuteMode should match snapshot 1`] = `
<div>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component "
      style="height: auto; overflow: auto;"
    >
      <div
        class="ant-list ant-list-vertical ant-list-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              style="min-height: 53px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test WaterfallList/SQLExecuteMode should match snapshot 2`] = `
<div>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component "
      style="height: auto; overflow: auto;"
    >
      <div
        class="ant-list ant-list-vertical css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <ul
              class="ant-list-items"
            >
              <li
                class="ant-list-item ant-list-item-no-flex"
              >
                <div
                  class="css-10ig619"
                >
                  <div
                    class="result-card-header"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <span
                          class="number"
                        >
                          #
                          1
                        </span>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="result-card-status-wrap"
                        >
                          <span
                            class="ant-tag ant-tag-default ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            准备执行
                          </span>
                          <div
                            class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical result-card-status-divider"
                            role="separator"
                          />
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-tag ant-tag-has-color ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1u3lh6f css-dev-only-do-not-override-txh9fw"
                                style="background-color: gray;"
                              >
                                <span
                                  class="custom-icon custom-icon-level-normal css-u3jcp4"
                                  role="img"
                                >
                                  <svg
                                    fill="none"
                                    height="19"
                                    viewBox="0 0 18 19"
                                    width="18"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M15 17H3C2.80109 17 2.61032 16.921 2.46967 16.7803C2.32902 16.6397 2.25 16.4489 2.25 16.25V2.75C2.25 2.55109 2.32902 2.36032 2.46967 2.21967C2.61032 2.07902 2.80109 2 3 2H15C15.1989 2 15.3897 2.07902 15.5303 2.21967C15.671 2.36032 15.75 2.55109 15.75 2.75V16.25C15.75 16.4489 15.671 16.6397 15.5303 16.7803C15.3897 16.921 15.1989 17 15 17ZM6 5.75V7.25H12V5.75H6ZM6 8.75V10.25H12V8.75H6ZM6 11.75V13.25H9.75V11.75H6Z"
                                      fill="#7D8CA8"
                                    />
                                  </svg>
                                </span>
                                0
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            复制执行语句
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            分 析
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="result-card-content"
                  >
                    <div
                      class="result-card-content-options"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 0px;"
                        >
                          <div
                            class="css-sljxhh"
                          >
                            执行语句
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <div
                            class="css-u9vvlc"
                          >
                            回滚语句
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 0px;"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                                  >
                                    <span
                                      class="custom-icon css-u3jcp4"
                                      role="img"
                                    >
                                      <svg
                                        fill="none"
                                        height="18"
                                        viewBox="0 0 18 18"
                                        width="18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M15 16.5H3C2.80109 16.5 2.61032 16.421 2.46967 16.2803C2.32902 16.1397 2.25 15.9489 2.25 15.75V2.25C2.25 2.05109 2.32902 1.86032 2.46967 1.71967C2.61032 1.57902 2.80109 1.5 3 1.5H15C15.1989 1.5 15.3897 1.57902 15.5303 1.71967C15.671 1.86032 15.75 2.05109 15.75 2.25V15.75C15.75 15.9489 15.671 16.1397 15.5303 16.2803C15.3897 16.421 15.1989 16.5 15 16.5ZM6 5.25V6.75H12V5.25H6ZM6 8.25V9.75H12V8.25H6ZM6 11.25V12.75H9.75V11.25H6Z"
                                          fill="#4583FF"
                                        />
                                      </svg>
                                    </span>
                                    <span>
                                      <span
                                        class="sql-source-title"
                                      >
                                        所在文件
                                      </span>
                                      -
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                          >
                            <span
                              class="custom-icon css-u3jcp4"
                              role="img"
                            >
                              <svg
                                height="18"
                                id="mx_n_1705397970752"
                                version="1.1"
                                viewBox="0 0 1024 1024"
                                width="18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M512 938.666667c-53.333333 0-384-257.258667-384-469.333334S299.925333 85.333333 512 85.333333s384 171.925333 384 384-330.666667 469.333333-384 469.333334z m0-352c64.8 0 117.333333-52.533333 117.333333-117.333334s-52.533333-117.333333-117.333333-117.333333-117.333333 52.533333-117.333333 117.333333 52.533333 117.333333 117.333333 117.333334z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              <span
                                class="sql-source-title"
                              >
                                所在行
                              </span>
                              -
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="actiontech-sql-renderer-wrapper css-dz7fl9"
                    >
                      <pre>
                        <code>
                          <div
                            class="code-line"
                          >
                            <span
                              class="code-line-number"
                            >
                              1
                            </span>
                            <span
                              class="hljs-keyword"
                            >
                              SELECT
                            </span>
                             
                            <span
                              class="hljs-number"
                            >
                              1
                            </span>
                            ;
                          </div>
                        </code>
                      </pre>
                    </div>
                    <div
                      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
                      role="tree"
                    >
                      <div>
                        <input
                          aria-label="for screen reader"
                          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="ant-tree-treenode"
                        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
                      >
                        <div
                          class="ant-tree-indent"
                        >
                          <div
                            class="ant-tree-indent-unit"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tree-list"
                        style="position: relative;"
                      >
                        <div
                          class="ant-tree-list-holder"
                        >
                          <div>
                            <div
                              class="ant-tree-list-holder-inner"
                              style="display: flex; flex-direction: column;"
                            >
                              <div
                                aria-grabbed="false"
                                class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                                draggable="false"
                              >
                                <span
                                  aria-hidden="true"
                                  class="ant-tree-indent"
                                />
                                <span
                                  class="ant-tree-switcher ant-tree-switcher_close"
                                >
                                  <span
                                    class="ant-tree-switcher-icon custom-icon custom-icon-arrow-down css-u3jcp4"
                                    role="img"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                                  title=""
                                >
                                  <span
                                    class="ant-tree-title"
                                  >
                                    <span
                                      class="audit-result-tree-title"
                                    >
                                      审核结果
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-tree ant-tree-icon-hide css-1fzwdia css-dev-only-do-not-override-txh9fw"
                      role="tree"
                    >
                      <div>
                        <input
                          aria-label="for screen reader"
                          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="ant-tree-treenode"
                        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
                      >
                        <div
                          class="ant-tree-indent"
                        >
                          <div
                            class="ant-tree-indent-unit"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tree-list"
                        style="position: relative;"
                      >
                        <div
                          class="ant-tree-list-holder"
                        >
                          <div>
                            <div
                              class="ant-tree-list-holder-inner"
                              style="display: flex; flex-direction: column;"
                            >
                              <div
                                aria-grabbed="false"
                                class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                                draggable="false"
                              >
                                <span
                                  aria-hidden="true"
                                  class="ant-tree-indent"
                                />
                                <span
                                  class="ant-tree-switcher ant-tree-switcher_close"
                                >
                                  <span
                                    class="ant-tree-switcher-icon custom-icon custom-icon-arrow-down css-u3jcp4"
                                    role="img"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                                  title="执行结果"
                                >
                                  <span
                                    class="ant-tree-title"
                                  >
                                    执行结果
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="result-card-footer"
                  >
                    <div
                      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-spin-container"
                      >
                        <div
                          class="css-lpwde2"
                        >
                          <svg
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="edit-2-fill"
                            >
                              <path
                                d="M6.162 12.6667H14V14H2V11.1713L8.6 4.57133L11.428 7.40066L6.16133 12.6667H6.162ZM9.542 3.62933L10.9567 2.21466C11.0817 2.08968 11.2512 2.01947 11.428 2.01947C11.6048 2.01947 11.7743 2.08968 11.8993 2.21466L13.7853 4.10066C13.9103 4.22568 13.9805 4.39522 13.9805 4.57199C13.9805 4.74877 13.9103 4.91831 13.7853 5.04333L12.3707 6.45733L9.54267 3.62933H9.542Z"
                                fill="#8A8F99"
                                id="Vector"
                              />
                            </g>
                          </svg>
                          <input
                            class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper result-describe-input css-1pd1cd5"
                            placeholder="添加说明"
                            type="text"
                            value="test"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
